Get trello auth working in an electron container

--- a/auth.html
+++ b/auth.html
@@ -2,7 +2,7 @@
 <html>
     <head>
     <meta charset="UTF-8">
-    <title>Trollbox</title>
+    <title>Trello Auth</title>
     </head>
     <body>
         <div id="container">
@@ -10,13 +10,10 @@
     </body>
 
     <script>
-    </script>
-
-    <script>
       (function() {
         const script = document.createElement('script');
         //eventually make this conditional
-        script.src = 'http://localhost:3000/dist/index.bundle.js';
+        script.src = 'http://localhost:3000/dist/auth.bundle.js';
         document.write(script.outerHTML);
       }());
     </script>
