--- a/auth.html
+++ b/auth.html
@@ -13,7 +13,7 @@
       (function() {
         const script = document.createElement('script');
         //eventually make this conditional
-        script.src = 'http://localhost:3000/dist/auth.bundle.js';
+        script.src = (process.env.HOT) ? 'http://localhost:3000/dist/auth.bundle.js' : './app/dist/auth.bundle.js';
         document.write(script.outerHTML);
       }());
     </script>
