--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 
     <script>
       (function() {
+        alert('hi');
         const script = document.createElement('script');
         //eventually make this conditional
-        script.src = 'http://localhost:3000/dist/index.bundle.js';
+        script.src = (process.env.HOT) ? 'http://localhost:3000/dist/index.bundle.js' : './dist/index.bundle.js';
+
         document.write(script.outerHTML);
       }());
     </script>
