--- a/app/auth.html
+++ b/app/auth.html
@@ -2,7 +2,7 @@
 <html>
     <head>
     <meta charset="UTF-8">
-    <title>Trollbox</title>
+    <title>Trello Auth</title>
     </head>
     <body>
         <div id="container">
@@ -10,15 +10,10 @@
     </body>
 
     <script>
-    </script>
-
-    <script>
       (function() {
-        alert('hi');
         const script = document.createElement('script');
         //eventually make this conditional
-        script.src = (process.env.HOT) ? 'http://localhost:3000/dist/index.bundle.js' : './dist/index.bundle.js';
-
+        script.src = (process.env.HOT) ? 'http://localhost:3000/dist/auth.bundle.js' : '../dist/auth.bundle.js';
         document.write(script.outerHTML);
       }());
     </script>
