--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
     <meta charset="UTF-8">
-    <title>Trello Auth</title>
+    <title>Trollbox</title>
     </head>
     <body>
         <div id="container">
@@ -10,10 +10,15 @@
     </body>
 
     <script>
+    </script>
+
+    <script>
       (function() {
+        alert('hi');
         const script = document.createElement('script');
         //eventually make this conditional
-        script.src = (process.env.HOT) ? 'http://localhost:3000/dist/auth.bundle.js' : './app/dist/auth.bundle.js';
+        script.src = (process.env.HOT) ? 'http://localhost:3000/dist/index.bundle.js' : '../dist/index.bundle.js';
+
         document.write(script.outerHTML);
       }());
     </script>
