Finish up version 0.0.1
- Fix env variable to identify production/development mode everywhere
- Fix trello client to actually return client rather than token
- don't show dev tools for production mode

--- a/app/auth.html
+++ b/app/auth.html
@@ -13,7 +13,7 @@
       (function() {
         const script = document.createElement('script');
         //eventually make this conditional
-        script.src = (window.isHot) ? 'http://localhost:3000/dist/auth.bundle.js' : '../dist/auth.bundle.js';
+        script.src = (window.isDev) ? 'http://localhost:3000/dist/auth.bundle.js' : '../dist/auth.bundle.js';
         document.write(script.outerHTML);
       }());
     </script>
