--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
       (function() {
         const script = document.createElement('script');
         //eventually make this conditional
-        script.src = (process.env.HOT) ? 'http://localhost:3000/dist/index.bundle.js' : '../dist/index.bundle.js';
+        script.src = (process.env.NODE_ENV === 'development') ? 'http://localhost:3000/dist/index.bundle.js' : '../dist/index.bundle.js';
 
         document.write(script.outerHTML);
       }());
